--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently 'cd backend  && npm run start ' 'cd client && yarn start '"
+    "start": "concurrently 'cd backend  && npm run start ' 'cd client && yarn start '",
+    "frontend": "cd client && yarn start"
     },
   "keywords": [
     "pysa",
