--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently 'cd backend  && npm run start ' 'cd client && yarn start '",
+    "dev": "concurrently 'cd backend  && npm run dev ' 'cd client && yarn start '",
     "frontend": "cd client && yarn start",
     "backend":"cd backend  && npm run start",
     "backend:dev": "cd backend  && npm run dev"
